fix: 调整 z-index; close #1246

--- a/src/plugin/tag-tip/index.less
+++ b/src/plugin/tag-tip/index.less
@@ -20,6 +20,7 @@
     overflow: auto;
     padding: 8px 0;
     scroll-padding: 16px;
+    scrollbar-width: thin;
     z-index: 10;
 
     &[hidden],
